# intersectionareaanalysis

./: .gitignore  AGENTS.md  README.md  clearinggdb.py  pyproject.toml  run_all.py  structure.txt
config/: stage1_portable.toml
docs/: README.md  cleanup_report_20260519.md  methodology.md  oracle_gis_relationship_notes.md  overview_methodology.md  phase_state_contract.md  workflow.md
docs/design/: current_design_index.md  early_data_processing_decision_diagram_outline.md  endpoint_junction_qa_methodology_recommendations.md  flow_decision_diagram_outline.md  network_analysis_reference_audit.md  roadway_graph_context_enrichment_plan.md  roadway_graph_crash_count_model_specification.md  roadway_graph_next_phase_plan.md  roadway_graph_rate_and_modeling_readiness_plan.md  (+6 more)
firststep/: firststep.py  firststepfigures.py  firststepxlsx.py
layer_summaries/: Crash_Data_Summary.csv  HMMS_TrafficSignals_Flat_Summary.csv  Hampton_Signals_Summary.csv  New_AADT_Summary.csv  Norfolk_Signals_Summary.csv  SDE_VDOT_SPEED_LIMIT_MSTR_RTE_Summary.csv  Travelway_Summary.csv  all_layer_fields.csv  layer_lrspoint_Summary.csv
legacy/: README.md
oracle_exports/: cotedop_extract_summary.txt  cotedop_gis_keys.csv
scripts/: audit_user_profile_cleanup.ps1  bootstrap.ps1  bootstrap_README.txt  create_local_copy_outside_onedrive.ps1  diagnose_divided_pairing_unresolved.ps1
secondstep/: secondstep.py  secondstepfigures.py
src/: README.md  __init__.py  __main__.py
tests/: test_access_same_corridor_prototype.py
thirdstep/: CrashIntersectionPipeline.pyt  cotedopget.py  thirdstepfigures.py
(+584 files in other folders)
