[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "intersection-crash-analysis"
version = "0.1.0"
description = "Stage 1 portability bootstrap for the Virginia intersection crash-analysis pipeline."
readme = "AGENTS.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "geopandas>=1.0",
    "shapely>=2.0",
    "pyproj>=3.6",
    "pyogrio>=0.9",
    "pyarrow>=18.0",
    "oracledb>=2.2",
]

[tool.setuptools]
packages = ["src", "src.active", "src.transitional"]
